Update css layout

--- a/css/doctor.css
+++ b/css/doctor.css
@@ -21,6 +21,7 @@
     background: #fff;
     border: 0.1rem solid rgba(0, 0, 0, 0.1);
     width: 33rem;
+    margin-bottom: 120px;
 }
 
 .doctor__img {
