--- a/css/main.css
+++ b/css/main.css
@@ -49,6 +49,7 @@
 html {
     font-size: 62.5%;
     overflow-x: hidden;
+    scroll-behavior: smooth;
 }
 
 /* Chỉnh thanh scroll */
@@ -118,7 +119,7 @@ body {
 
 /* Section */
 section {
-    min-height: 50vh;
+    min-height: 70vh;
     padding: 0 7%;
     padding-top: 9rem;
 }
@@ -224,4 +225,21 @@ section {
 
 .footer__credit a {
     color: var(--red);
+}
+
+/* Scroll top */
+.scroll-top {
+    position: fixed;
+    bottom: 7.5rem;
+    right: 2rem;
+    z-index: 10;
+    opacity: 0;
+}
+
+.scroll-top.active {
+    opacity: 1;
+}
+
+.scroll-top__img {
+    height: 7rem;
 }
