--- a/css/main.css
+++ b/css/main.css
@@ -243,3 +243,71 @@ section {
 .scroll-top__img {
     height: 7rem;
 }
+
+.tracker__container {
+    margin-bottom: 120px;
+    text-align: center;
+    border: 1px solid #777;
+    border-radius: 5px;
+}
+
+.tracker__date {
+    margin: 10px 0;
+    color: teal;
+    font-size: 1.8rem;
+}
+
+form input,
+form button {
+    width: 200px;
+    height: 35px;
+    border: 1px solid #ccc;
+    padding: 0 5px;
+    outline: none;
+    cursor: pointer;
+}
+form button {
+    width: 70px;
+}
+
+.tracker__name-country {
+    color: #555;
+    margin-top: 20px;
+}
+
+.tracker__content {
+    margin: 10px 0;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    cursor: pointer;
+}
+
+.tracker__content .box {
+    min-width: 270px;
+    margin: 10px;
+    border: 1px solid #ccc;
+    padding: 15px;
+    letter-spacing: 2px;
+}
+
+.tracker__content .box:hover {
+    background: #eee4;
+}
+
+.tracker__content .box p {
+    text-transform: uppercase;
+    opacity: 0.7;
+}
+
+.confirmed h3,
+.confirmed i {
+    color: crimson;
+}
+.recovered h3,
+.recovered i {
+    color: green;
+}
+::-webkit-scrollbar {
+    display: none;
+}
